--- a/src/app/home/activity-container.component.css
+++ b/src/app/home/activity-container.component.css
@@ -25,3 +25,10 @@
 .visible {
     visibility: visible;
 }
+
+@media only screen and (max-width: 600px) {
+    .activity {
+        height: calc(100% - 5em);
+        border-radius: 2rem 2rem 0 0;
+    }
+}
